--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Ruby CI
 
 on:
   pull_request:
@@ -7,53 +7,53 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3'
+          rubygems: latest
+          bundler: 2
+          bundler-cache: true
+
+      - run: bundle exec standardrb
+
+  required-ubuntu:
     name: Ruby ${{ matrix.ruby }} - ${{ matrix.os }}
+
     strategy:
       fail-fast: false
       matrix:
         os:
-          - macos-latest
           - ubuntu-20.04
+          - ubuntu-22.04
+          - ubuntu-24.04
         ruby:
           - '2.6'
           - '2.7'
-          - '3.0'
           - '3.1'
           - '3.2'
           - '3.3'
-          - head
           - jruby
-          - jruby-head
           - truffleruby
         include:
-          - ruby: head
+          - ruby: jruby
+            os: ubuntu-22.04
             continue-on-error: true
-          - ruby: jruby-head
+          - ruby: truffleruby
+            os: ubuntu-22.04
             continue-on-error: true
-          - os: windows-latest
-            ruby: mingw
-          - os: windows-latest
-            ruby: mswin
-          - os: windows-latest
-            ruby: jruby
-            continue-on-error: true
-          - os: ubuntu-22.04
-            ruby: head
-            continue-on-error: true
-          - os: ubuntu-22.04
-            ruby: '3.1'
-          - os: ubuntu-22.04
-            ruby: '3.2'
-          - os: ubuntu-22.04
-            ruby: '3.3'
-            standardrb: true
 
     runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.continue-on-error || false }}
+    continue-on-error: ${{ matrix.continue-on-error }}
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
@@ -63,5 +63,94 @@ jobs:
 
       - run: bundle exec ruby -S rake test --trace
 
-      - if: matrix.standardrb == true
-        run: bundle exec standardrb
+  required-macos:
+    name: Ruby ${{ matrix.ruby }} - ${{ matrix.os }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-12
+          - macos-13
+          - macos-14
+        ruby:
+          - '2.6'
+          - '2.7'
+          - '3.1'
+          - '3.2'
+          - '3.3'
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          rubygems: latest
+          bundler: 2
+          bundler-cache: true
+
+      - run: bundle exec ruby -S rake test --trace
+
+  required-windows:
+    name: Ruby ${{ matrix.ruby }} - ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - windows-2019
+          - windows-2022
+        ruby:
+          - '2.6'
+          - '2.7'
+          - '3.0'
+          - '3.1'
+          - '3.2'
+          - '3.3'
+          - mswin
+          - ucrt
+        include:
+          - ruby: mingw
+            os: windows-2022
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          rubygems: latest
+          bundler: 2
+          bundler-cache: true
+
+      - run: bundle exec ruby -S rake test --trace
+
+  ruby-head-optional:
+    name: Ruby ${{ matrix.ruby }} - ${{ matrix.os }} (optional)
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        ruby:
+          - head
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
+
+    continue-on-error: true
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          rubygems: latest
+          bundler: 2
+          bundler-cache: true
+
+      - run: bundle exec ruby -S rake test --trace
