Deprecate array and string type initialization
- 2 deprecations:

  - Array-based MIME::Type initialization
  - String-based MIME::Type initialization

  Use of these these will result in deprecation warnings.

- Added `logger` to the gemspec to suppress a bundled gem warning with
  Ruby 3.3.5. This warning should not be showing up until Ruby 3.4.0 is
  released and will be suppressed in Ruby 3.3.6.

- Reworked the deprecation message code to be somewhat more flexible and
  allow for outputting certain warnings once. Because there will be
  at least one other release after 3.6, we do not need to make the
  type initialization deprecations frequent with this release.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
             continue-on-error: true
 
     runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.continue-on-error }}
+    continue-on-error: ${{ matrix.continue-on-error || false }}
 
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -104,7 +104,6 @@ jobs:
         ruby:
           - '2.6'
           - '2.7'
-          - '3.0'
           - '3.1'
           - '3.2'
           - '3.3'
@@ -112,6 +111,8 @@ jobs:
           - ucrt
         include:
           - ruby: mingw
+            os: windows-2022
+          - ruby: '3.0'
             os: windows-2022
 
     runs-on: ${{ matrix.os }}
