chore: Update project structure
This makes the project structure more consistent with the structure
recently applied to mime-types-data.

GitHub Actions workflow changes:

- Increased GitHub action security with:

  - step-security/harden-runner
  - actions/dependency-review-action

- Added Ruby 3.4.
- Removed macOS 12.
- Added macOS 15.
- Added reviewdog for typos, action lint, and standardrb.
- Added OSSF supply-chain security scorecard.
- Added zizmor for action security.

- Set up trusted publishing. This also required creating a version file,
  which is awful but required to prevent always trying to publish.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 *.gem
+.bundle/
 .byebug_history
 .rake_tasks~
 .source_index
 Gemfile.lock
-doc/
-html/
-pkg/
-publish/
-test/cache.tst
-tmp/
+mise.toml
+/benchmarks/
+/coverage/
+/doc/
+/html/
+/pkg/
+/publish/
+/test/cache.tst
+/tmp/
+/vendor/
