--- a/.standard.yml
+++ b/.standard.yml
@@ -1,4 +1,8 @@
+---
 parallel: true
 ruby_version: 2.3
 ignore:
-  - 'mime-types.gemspec'
+  - '*.gemspec'
+  - 'pkg/**/*'
+  - Rakefile:
+      - Layout/HeredocIndentation
