--- a/.github/workflows/publish-gem.yml
+++ b/.github/workflows/publish-gem.yml
@@ -46,7 +46,9 @@ jobs:
 
       - id: rubygems
         run: |
-          ruby -e 'print "version=", Gem::Specification.load(ARGV[0]).rubygems_version, "\n"' mime-types.gemspec >> $GITHUB_OUTPUT
+          ruby -e \
+            'print "version=", Gem::Specification.load(ARGV[0]).rubygems_version, "\n"' \
+            mime-types.gemspec >>"${GITHUB_OUTPUT}"
 
       - uses: ruby/setup-ruby@277ba2a127aba66d45bad0fa2dc56f80dbfedffa # v1.222.0
         with:
