--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,6 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
 
-    env:
-      BUNDLE_WITHOUT: "profile:data:coverage"
-
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
@@ -36,6 +33,35 @@ jobs:
 
       - run: bundle exec standardrb
 
+  coverage:
+    name: Generate Coverage Report
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
+        with:
+          egress-policy: audit
+
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+
+      - uses: ruby/setup-ruby@277ba2a127aba66d45bad0fa2dc56f80dbfedffa # v1.222.0
+        with:
+          ruby-version: '3.4'
+          rubygems: latest
+          bundler: 2
+          bundler-cache: true
+
+      - run: |
+          bundle install --jobs 4 --retry 3
+          bundle exec ruby -S rake coverage --trace
+        env:
+          COVERAGE: true
+
+      - uses: coverallsapp/github-action@648a8eb78e6d50909eff900e4ec85cab4524a45b #v2.3.6
+
   required-ubuntu:
     name: Ruby ${{ matrix.ruby }} - ${{ matrix.os }}
 
@@ -54,10 +80,6 @@ jobs:
           - '3.3'
           - '3.4'
           - truffleruby
-        include:
-          - os: ubuntu-24.04
-            ruby: '3.4'
-            coverage: true
 
     runs-on: ${{ matrix.os }}
 
@@ -71,16 +93,6 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Configure Bundler
-        run: |
-          if [[ -n "${COVERAGE}" ]]; then
-            echo "BUNDLE_WITHOUT=profile:data"
-          else
-            echo "BUNDLE_WITHOUT=profile:data:coverage"
-          fi >>"$GITHUB_ENV"
-        env:
-          COVERAGE: ${{ matrix.coverage }}
-
       - uses: ruby/setup-ruby@277ba2a127aba66d45bad0fa2dc56f80dbfedffa # v1.222.0
         with:
           ruby-version: ${{ matrix.ruby }}
@@ -88,16 +100,7 @@ jobs:
           bundler: 2
           bundler-cache: true
 
-      - name: Run Tests (without coverage)
-        run: bundle exec ruby -S rake test --trace
-        if: ${{ !matrix.coverage }}
-
-      - name: Run Tests (with coverage)
-        run: bundle exec ruby -S rake test:coverage --trace
-        if: ${{ matrix.coverage }}
-
-      - uses: coverallsapp/github-action@648a8eb78e6d50909eff900e4ec85cab4524a45b #v2.3.6
-        if: ${{ matrix.coverage }}
+      - run: bundle exec ruby -S rake test --trace
 
   required-macos:
     name: Ruby ${{ matrix.ruby }} - ${{ matrix.os }}
@@ -118,9 +121,6 @@ jobs:
           - '3.4'
 
     runs-on: ${{ matrix.os }}
-
-    env:
-      BUNDLE_WITHOUT: "profile:data:coverage"
 
     steps:
       - name: Harden the runner (Audit all outbound calls)
@@ -166,9 +166,6 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    env:
-      BUNDLE_WITHOUT: "profile:data:coverage"
-
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
@@ -207,9 +204,6 @@ jobs:
     continue-on-error: true
     runs-on: ${{ matrix.os }}
 
-    env:
-      BUNDLE_WITHOUT: "profile:data:coverage"
-
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
@@ -245,9 +239,6 @@ jobs:
 
     continue-on-error: true
     runs-on: ${{ matrix.os }}
-
-    env:
-      BUNDLE_WITHOUT: "profile:data:coverage"
 
     steps:
       - name: Harden the runner (Audit all outbound calls)
