fix: Fix broken publish gem reference

--- a/.github/workflows/publish-gem.yml
+++ b/.github/workflows/publish-gem.yml
@@ -21,7 +21,7 @@ permissions: {}
 
 jobs:
   release:
-    if: github.repository == 'mime-types/mime-types' && (github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged))
+    if: github.repository == 'mime-types/ruby-mime-types' && (github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged))
 
     runs-on: ubuntu-latest
     environment: production
