chore: Windows 2019 runners are deprecated

--- a/.github/workflows/publish-gem.yml
+++ b/.github/workflows/publish-gem.yml
@@ -25,6 +25,7 @@ concurrency:
 
 jobs:
   release:
+    name: Release mime-types
     if: github.repository == 'mime-types/ruby-mime-types' && (github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged))
 
     runs-on: ubuntu-latest
