--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,22 +176,19 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - windows-2019
           - windows-2022
+          - windows-2025
         ruby:
           - '2.6'
           - '2.7'
+          - '3.0'
           - '3.1'
           - '3.2'
           - '3.3'
           - '3.4'
+          - mingw
           - mswin
           - ucrt
-        include:
-          - ruby: mingw
-            os: windows-2022
-          - ruby: '3.0'
-            os: windows-2022
 
     runs-on: ${{ matrix.os }}
 
